<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="3mm"
    android:paddingTop="2mm"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title2"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc1"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:padding="15dp"
            android:autofillHints="emailAddress"
            android:textSize="20sp"
            android:hint="@string/hintemail"
            android:maxLines="1"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/roud_back5"
            android:id="@+id/EmailInput"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roud_back5">

            <EditText
                android:id="@+id/PasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"
                android:autofillHints="password"
                android:background="@android:color/transparent"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/showhidepasswordbtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/chaine2"
                android:src="@drawable/view" />

        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/title2"
            android:textAllCaps="false"
            android:layout_marginTop="40dp"
            android:id="@+id/btnLogin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@drawable/btn_round"
            android:textColor="@color/white"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/chain1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSignup"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>